Upgrade Java from 8 to 21 LTS with OpenRewrite recipe